# SimpleChat

./: .gitignore  CMakeLists.txt  cleanBuild.bat  main.cpp  socketServer.cpp  socketServerOld.cpp  vcpkg.json
